# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//test/xts/tools/build/suite.gni")

ohos_moduletest_suite("HatsUserIamUserAuthTest") {
  module_out_path = "useriam/user_auth"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "./include",
    "../common/include",
    "//drivers/peripheral/user_auth/hdi_service/include",
    "//base/useriam/user_auth_framework/common",
    "//base/useriam/user_auth_framework/common/logs",
    "//third_party/googletest/googletest/include/gtest",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "./src/user_auth_hdi.cpp",
    "./src/user_auth_type_test.cpp",
  ]

  deps = [
    "../common:useriam_test_common",
    "//base/useriam/user_auth_framework/common:iam_test",
    "//drivers/peripheral/user_auth/hdi_service:libuser_auth_interface_service_1.0",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_user_auth:user_auth_idl_headers",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
