# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("$base_root/build/config/features.gni")
import("$base_root/build/ohos_var.gni")
import("$base_root/build/test.gni")
import("$base_root/test/xts/tools/build/suite.gni")

ohos_moduletest_suite("HatsUserIamUserAuthTestAdditionalTest") {
  module_out_path = "useriam/user_auth"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "./include",
    "../common/include",
    "$base_root/drivers/peripheral/user_auth/hdi_service/include",
    "$base_root/base/useriam/user_auth_framework/common",
    "$base_root/base/useriam/user_auth_framework/common/logs",
    "$base_root/third_party/googletest/googletest/include/gtest",
    "$base_root/commonlibrary/c_utils/base/include",
  ]

  sources = [ "./src/user_auth_hdi.cpp" ]

  deps = [
    "$base_root/base/useriam/user_auth_framework/common:iam_test",
    "$base_root/drivers/interface/user_auth/v2_0:libuser_auth_stub_2.0",
    "$base_root/drivers/peripheral/user_auth/hdi_service:libuser_auth_interface_service_2.0",
    "$base_root/third_party/googletest:gtest_main",
    "../common:useriam_test_common",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_user_auth:user_auth_idl_headers",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
