# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/peripheral/audio/audio.gni")
import("//test/xts/hats/build.gni")
import("//test/xts/tools/build/suite.gni")

group("hdi_base_common") {
  if (!defined(ohos_lite)) {
    testonly = true
  }
  if (hats_rich == false) {
    deps = [
      "common/adapter:HatsHdfAudioIdlAdapterTest",
      "common/adapter_additional:HatsHdfAudioIdlAdapterTestAdditional",
      "common/capture:HatsHdfAudioIdlCaptureTest",
      "common/capture_additional:HatsHdfAudioIdlCaptureTestAdditional",
      "common/manager:HatsHdfAudioIdlManagerTest",
      "common/render:HatsHdfAudioIdlRenderTest",
      "common/render_additional:HatsHdfAudioIdlRenderTestAdditional",

      #"benchmarktest:HatsHdfAudioBenchmarkTest"
    ]
  } else {
    deps = [
      "common/adapter:HatsHdfAudioIdlAdapterTest",
      "common/capture:HatsHdfAudioIdlCaptureTest",
      "common/manager:HatsHdfAudioIdlManagerTest",
      "common/render:HatsHdfAudioIdlRenderTest",

      #"benchmarktest:HatsHdfAudioBenchmarkTest"
    ]
  }
}
group("hdi_effect") {
  if (!defined(ohos_lite)) {
    testonly = true
  }
  deps = [
    "effect:HatsHdfAudioEffectTest",
    #"benchmarktest/effect:HatsHdfAudioEffectBenchmarkTest"
  ]
}
group("hdi_effect_additional") {
  if (!defined(ohos_lite)) {
    testonly = true
  }
  if (hats_rich == false) {
    deps = [ "effect_additional:HatsHdfAudioEffectTestAdditional" ]
  } else {
  }
}
