# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hdf/bluetooth"
root_path = "../../../../../../drivers/peripheral/bluetooth/hci"

ohos_moduletest_suite("HatsBluetoothHdiTest") {
  module_out_path = module_output_path
  sources = [
    "bluetooth_hci_callback_impl.cpp",
    "bluetooth_hci_services_test.cpp",
  ]

  deps = [
    "${root_path}/hdi_service:hdi_bluetooth_hci_service",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  configs = [ ":hdf_bluetooth" ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_interface_bluetooth:libbluetooth_hci_proxy_1.0",
      "hdf_core:libhdf_host",
      "hdf_core:libhdf_ipc_adapter",
      "hdf_core:libhdf_utils",
      "hdf_core:libhdi",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [ "ipc:ipc_single" ]

  subsystem_name = "xts"
  part_name = "hats"
}

config("hdf_bluetooth") {
  include_dirs = [
    "include",
    "${root_path}/hdi_service",
    "${root_path}/hdi_service/implement",
  ]
}
