# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../../"
import("//build/ohos_var.gni")
import("../../../../tools/build/suite.gni")

import("//build/ohos.gni")
import("//build/test.gni")
import("$base_root/drivers/peripheral/camera/hal/camera.gni")
module_output_path = "hats/camera"

ohos_moduletest_suite("HatsHdfCamerabenchmarkTest") {
  testonly = true
  module_out_path = module_output_path
  sources = [
    "../cameraMg/src/common.cpp",
    "./hdf_camera_benchmark_test.cpp",
  ]
  include_dirs = [
    # common includes
    "./include",
    "$base_root/system/core/include/cutils",
    "//third_party/googletest/googletest/include",
    "$base_root/drivers/peripheral/camera/interfaces/include",
    "$base_root/drivers/peripheral/camera/hal/include",
  ]
  deps = [
    "//third_party/benchmark",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hdf_core:libhdf_host",
      "hdf_core:libhdf_ipc_adapter",
      "hdf_core:libhdf_utils",
      "hdf_core:libhdi",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_single",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  external_deps += [
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_camera:metadata",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "xts"
  part_name = "xts_hats"
}
