# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//test/xts/hats/build.gni")
import("//test/xts/tools/build/suite.gni")

#################################group#########################################
group("HatsHdfCameraMgTest") {
  if (!defined(ohos_lite)) {
    testonly = true
  }
  if (is_standard_system) {
    if (hats_rich == false) {
      deps = [ "v1_0:HatsHdfCameraMgv0Test" ]
    } else {
      deps = [
        "enum:HatsHdfCameraEnumTest",
        "v1_0:HatsHdfCameraMgv0Test",
        "v1_1:HatsHdfCameraMgTestv1",
        "v1_2:HatsHdfCameraMgTestv2",
        "v1_3:HatsHdfCameraMgTestv3",
      ]
    }
  }
}
###############################################################################
