# Copyright (c) 2022 - 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/codec"

ohos_moduletest_suite("HatsHdfAdapterCodecTest") {
  module_out_path = module_output_path
  configs = [ ":hdc_codec_adapter" ]

  sources = [ "codec_hdi_adapter_test.cpp" ]

  deps = [ "//third_party/googletest:gtest_main" ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_peripheral_codec:libcodec_hdi_passthrough_impl",
      "hdf_core:libhdf_utils",
      "hdf_core:libhdi",
      "hiviewdfx_hilog_native:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  subsystem_name = "xts"
  part_name = "xts_hats"
}
config("hdc_codec_adapter") {
  include_dirs = [ "//third_party/openmax/api/1.1.2" ]
}
