# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//test/xts/hats/build.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/codec"
base_root = "../../../../../../"
ohos_moduletest_suite("HatsHdfOmxCodecTest") {
  module_out_path = module_output_path
  configs = [ ":hdf_codec_omx" ]
  sources = [
    "codec_hdi_manager_test.cpp",
    "codec_hdi_omx_test.cpp",
  ]

  deps = [ "//third_party/googletest:gtest_main" ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "drivers_interface_display:display_buffer_idl_headers",
      "drivers_interface_display:display_composer_idl_headers",
      "drivers_interface_display:libdisplay_buffer_hdi_impl",
      "drivers_peripheral_codec:libcodec_hdi_omx_client",
      "graphic_chipsetsdk:buffer_handle",
      "hdf_core:libhdf_host",
      "hdf_core:libhdf_ipc_adapter",
      "hdf_core:libhdf_utils",
      "hdf_core:libhdi",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_single",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  defines = []
  if (xts_hats_rich) {
    defines += [ "SUPPORT_OMX" ]
  }
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_codec"
}

config("hdf_codec_omx") {
  include_dirs = [
    "//third_party/openmax/api/1.1.2",
    "$base_root/drivers/interface/display/composer/hdifd_parcelable",
  ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
  if (xts_hats_rich == false) {
    cflags += [ "-DSUPPORT_OMX" ]
  }
}
