# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/display"
config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_static_library("disp_hdi_test_common") {
  sources = [ "../common/display_test_utils.cpp" ]
  include_dirs = [
    "include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
  ]
  output_name = "disp_hdi_test_common"
  cflags = [
    "-DGRALLOC_GBM_SUPPORT",
    "-Wno-macro-redefined",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_display"
}

ohos_moduletest_suite("HatszHdfDisplayDeviceTest") {
  module_out_path = module_output_path
  sources = [
    "hdi_composition_check.cpp",
    "hdi_device_test.cpp",
    "hdi_test_device.cpp",
    "hdi_test_display.cpp",
    "hdi_test_layer.cpp",
  ]
  deps = [
    ":disp_hdi_test_common",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//drivers/peripheral/display/hal:hdi_display_gralloc",
    "//third_party/googletest:gtest_main",
  ]
  include_dirs = [
    "../common",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    ".",
  ]
  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  cflags = [ "-Wno-unused-function" ]
}
