# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/external_device_manager"
usb_bus_extension_include_path = "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb"
ohos_moduletest_suite("HatsHdfExternalBusUsbTest") {
  module_out_path = module_output_path
  sources = [
    "src/usb_bus_extension_test.cpp",
    "src/usb_ddk_service_mock.cpp",
    "src/usb_driver_info_test.cpp",
    "src/usb_impl_mock.cpp",
    "src/usb_subscriber_test.cpp",
  ]
  include_dirs = [
    "include",
    "${ext_mgr_path}/frameworks/ddk/usb/",
    "${ext_mgr_path}/interfaces/ddk/usb/",
    "${usb_bus_extension_include_path}",
  ]
  deps = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension/usb:driver_extension_usb_bus",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/drivers_pkg_manager:drivers_pkg_manager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]
  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "drivers_interface_usb:libusb_ddk_proxy_1.0",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]
  configs = [ "${utils_path}:utils_config" ]
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
