# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
import("//test/xts/tools/build/suite.gni")
module_output_path = "hats/ddk_base_test"

ohos_moduletest_suite("HatsHdfExternalDdkBaseTest") {
  module_out_path = "${module_output_path}"

  sources = [ "ddk_base_test.cpp" ]

  include_dirs = [
    "${ext_mgr_path}/interfaces/ddk/base/",
    "${utils_path}/include/",
  ]

  deps = [
    "${ext_mgr_path}/frameworks/ddk/base:ddk_base",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "hdf"
  part_name = "external_device_manager"

  configs = [ "${utils_path}:utils_config" ]
}
