# Copyright (c) Huawei Technologies Co., Ltd. 2023-2024. aLL right reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
import("//test/xts/tools/build/suite.gni")

module_output_path = "hats/ddk_permission_test"
ohos_moduletest_suite("HatsHdfExternalDdkPermissionTest") {
  module_out_path = module_output_path

  sources = [
    "${ext_mgr_path}/frameworks/ddk/usb/usb_config_desc_parser.cpp",
    "${ext_mgr_path}/frameworks/ddk/usb/usb_ddk_api.cpp",
    "ddk_permission_test.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/frameworks/ddk/usb",
    "${ext_mgr_path}/interfaces/ddk/usb",
    "${ext_mgr_path}/interfaces/innerkits/",
    "${ext_mgr_path}/services/zidl/include/",
    "${utils_path}/include/",
  ]

  deps = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/driver_permission:driver_permission_manager",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "drivers_interface_usb:libusb_ddk_proxy_1.0",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "xts"
  part_name = "hats"
}
